fix(Sidebar): fix links text collapsing

--- a/src/components/Sidebar/LinksGroup/LinksGroup.module.scss
+++ b/src/components/Sidebar/LinksGroup/LinksGroup.module.scss
@@ -2,6 +2,7 @@
 
 .headerLink {
   overflow-x: hidden;
+  white-space: nowrap;
 
   a {
     display: block;
